<resources>
    <string name="app_name">PriorTM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_text">Let\'s start scheduling some tasks!</string>
    <string name="get_started_text">Let\'s Go...</string>
    <string name="tag_text">Plan Today.Enjoy Tomorrow</string>
    <string name="calender_event_text">Activities for Today</string>
    <string name="activity_text">This is activity for today!</string>
    <string name="setting_text">Settings</string>
    <string name="privacy_text">Privacy</string>
    <string name="profile_text">Profile</string>
    <string name="task_completed_text">Task Completed</string>
    <string name="task_completed_count">250</string>
    <string name="pending_task_text">Pending Tasks</string>
    <string name="pending_task_count">11</string>
    <string name="future_task_text">Future Goals</string>
    <string name="future_task_count">21</string>
    <string name="overview_text">Task Overview</string>
    <string name="performance_text">Task Performance Chart</string>
</resources>