<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/overview_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_completed_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_completed_count"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="50dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pending_task_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending_task_count"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="50dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_task_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_task_count"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="50dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</RelativeLayout>