<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/tag_text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/motivation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/prompt_text"
                android:textSize="19sp" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/startbutton"
        android:text="@string/get_started_text"
        android:textColor="@color/design_default_color_primary"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>